# Project5

./: .gitignore  INSTALL.md  README.md  integrationTest.sh
dissimulation/: InputFiles.java  InputFiles.java~  ReadTxt.java  TextToBinary.java  TextToBinary.java~  build.sh  dissimulate
dissimulation/Matrice/: .project
dissimulation/resources/: Chloride.txt  mediumText.txt  predefined_dictionnary.txt  test.txt  test2.txt
dissimulation/test/: CompressorTest.java  HuffmanTreeTest.java  MNTTest.java  TextToBinaryTest.java
revelation/: CMakeCache.txt  CMakeLists.txt  Makefile  ManipC  ManipC.c  bmpRead  bmpRead.c  build.sh  cmake_install.cmake  messageDecode.txt  reveal  writeTxt  writeTxt.c
revelation/resource/: message.txt
revelation/src/: aaaa.c  argument.c  argument.h  arguments.c  arguments.h  bmpRead.c  decompress.c  file.c  file.h  formatDetector  formatDetector.c  formatDetector.h  hexa.c  image.c  image.h  main.c  options.c  options.h  path.c  path.h  reveal.c  reveal.h  util.c  util.h  validateArguments.c  validateArguments.h  writeTxt.c
revelation/src/decompress/: decompress.c  decompress.h  dictionary.c  dictionary.h
revelation/src/pattern/: direct.c  direct.h  reveal.c  reveal.h  reverse.c  reverse.h
revelation/src/utils/: checkChannels.c  checkChannels.h  checkColor.c  checkColor.h  checkFormat.c  checkFormat.h  file.c  file.h  formatDetector.c  formatDetector.h  hexa.c  hexa.h  image.h  utilBit.c  utilBit.h  validateChannels.c  validateChannels.h  validateFormat.c  validateFormat.h  validatePattern.c  validatePattern.h
revelation/tests/: TestL5.sh
revelation/tests/outputs/: outputL5test2.txt
revelation/testsReveal/: TestL5.sh
revelation/testsReveal/outputs/: outputL5test1.txt
tests/: L1teste.sh  L2test.sh  L5test.sh  integrationTest.sh
(+63 files in other folders)
